# ourairports_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
docs/: book.toml
docs/src/: SUMMARY.md  about.md  airport_frequencies.md  airports.md  countries.md  navaids.md  regions.md  runways.md
docs/src/api_docs/: countries.md  runways.md
ourairports/: Cargo.toml  README.md
ourairports/src/: airports.rs  lib.rs  location.rs  navaids.rs  runways.rs
ourairports_derive/: Cargo.toml
ourairports_derive/src/: lib.rs
src/: airport_frequencies.rs  airports.rs  countries.rs  lib.rs  main.rs  navaids.rs  regions.rs  runways.rs
src/ourairports/: airport_frequencies.rs  airports.rs  countries.rs  mod.rs  navaids.rs  regions.rs  runways.rs
static/: index.html
static/index/: index.html
web/: Cargo.toml  README.md
web/docs/: book.toml
web/docs/src/: about.md  airport_frequencies.md  navaids.md  regions.md  runways.md
web/src/pages/: airport_frequencies.rs  airports.rs  countries.rs  mod.rs  navaids.rs  regions.rs  runways.rs
web/static/: index.html
web/static/docs/: 404.html  about.html  airport_frequencies.html  airports.html  countries.html  index.html  navaids.html  print.html  regions.html  runways.html  searchindex.js  searchindex.json
