[package]
name = "ourairports_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1"
error-chain = "0.12"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
actix-web = "3"