[package]
name = "ourairports"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust interface for handling OurAirports data"
homepage = "https://github.com/megascrapper/ourairports_api/tree/master/ourairports"
repository = "https://github.com/megascrapper/ourairports_api"
categories = ["aerospace"]
keywords = ["ourairports", "aviation-data", "airport-data", "open-data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1"
thiserror = "1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
env_logger = "0.9"
log = "0.4"