[package]
name = "ourairports_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ourairports = { path = "../ourairports" }
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "3"
env_logger = "0.9"
log = "0.4"
actix-files = "0.5.0"